test/libsolidity/errorRecoveryTests/wrong_compiler_recovers_3.sol
pragma solidity ^99.99.0;
contract C {
    uint ;
}
// ----
// ParserError 6635: (48-49): Expected identifier but got ';'
// ParserError 6635: (50-51): Expected ';' but got '}'
